Chore: add backend Dockerfile and dockerignore